kubecfg/templates/matrix.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix
spec:
  selector:
    app: matrix
  ports:
  - name: http
    targetPort: 8008
    port: 8008
  - name: https
    targetPort: 8448
    port: 8448
  - name: turn
    port: 3478
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: matrix
spec:
  template:
    metadata:
      labels:
        app: matrix
    spec:
      nodeSelector:
        kubernetes.io/hostname: otto
      containers:
        # Main matrix server
        - name: synapse
          image: avhost/docker-matrix:v0.28.1
          livenessProbe:
            httpGet:
              path: /_matrix/client/versions
              port: 8008
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 15
          ports:
            - containerPort: 8008
              name: http
            - containerPort: 8448
              name: https
          volumeMounts:
            - name: config
              subPath: homeserver.yaml
              mountPath: /data/homeserver.yaml
            - name: config
              subPath: potatofrom.space.log.config
              mountPath: /data/potatofrom.space.log.config
            - name: data
              mountPath: /data2
        - name: db
          image: postgres
          ports:
            - containerPort: 5342
              name: postgres
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
      volumes:
        # Stores SSL keys, media_store
        - name: data
          persistentVolumeClaim:
            claimName: matrix-data
        - name: db
          persistentVolumeClaim:
            claimName: matrix-db
        - name: config
          secret:
            secretName: matrix-config
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "14400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "14400"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "14400"
  name: matrix
spec:
  tls:
    - secretName: matrix-tls
      hosts:
        - potatofrom.space
  rules:
  - host: potatofrom.space
    http:
      paths:
      - path: /_matrix
        backend:
          serviceName: matrix
          servicePort: 8008
