kubecfg/templates/paperless.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
spec:
  selector:
    app: paperless
  ports:
  - name: http
    targetPort: 8000
    port: 8000
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: paperless
spec:
  template:
    metadata:
      labels:
        app: paperless
    spec:
      nodeSelector:
        kubernetes.io/hostname: rem
      containers:
        # Main paperless server
        - name: webserver
          image: danielquinn/paperless
          args:
            - runserver
            - --insecure
            - --noreload
            - 0.0.0.0:8000
          livenessProbe:
            httpGet:
              path: /admin/login/
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 3
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
        - name: consume
          args:
          - document_consumer
          image: danielquinn/paperless
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
            - name: consume
              mountPath: /consume
      volumes:
        # Stores SSL keys, media_store
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media
        - name: consume
          hostPath:
            path: /srv/paperless-consume
            type: Directory
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
  name: paperless
spec:
  tls:
    - secretName: paperless-tls
      hosts:
        - paperless.potatofrom.space
  rules:
  - host: paperless.potatofrom.space
    http:
      paths:
      - path: /
        backend:
          serviceName: paperless
          servicePort: 8000
